--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -27,6 +27,9 @@
     flex-basis: calc(100% / 6 - 30px);
     margin-left: 30px;
   }
+  .clients-item:first-child {
+    margin-left: 0 ;
+  }
   
   .clients-link {
     display: flex;
