--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -7,17 +7,18 @@
   .site-nav {
     display: flex;
     color: var(--primery-text-color);
+
   }
   
-  .site-nav .item + .item {
+  .site-nav__item{
     margin-left: 50px;
   }
   
-  .item .link {
+  .site-nav__link{
     padding-top: 32px;
     padding-bottom: 32px;
   }
-  .site-nav .link {
+  .site-nav__link {
     position: relative;
     display: flex;
     color: var(--primery-text-color);
@@ -27,8 +28,8 @@
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .site-nav .link:hover,
-  .site-nav .link:focus {
+  .site-nav__link:hover,
+  .site-nav__link:focus {
     color: var(--accent-color);
   }
   
