--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,7 +6,7 @@
   
     background: #f5f4fa;
   }
-  .team .title {
+  .team__title {
     margin-bottom: 50px;
   
     font-weight: 700;
@@ -28,10 +28,16 @@
     display: flex;
     
   }
-  .team-flex .item {
+  .team__item {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
+
+    &:first-child{
+      margin-left: 0;
+    }
   }
+
+  
   
   .team-text {
     margin-bottom: 16px;
