--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,10 @@ img {
   margin-left: 50px;
 }
 
+.site-nav__item:first-child {
+  margin-left: 0;
+}
+
 .site-nav__link {
   padding-top: 32px;
   padding-bottom: 32px;
