--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -22,14 +22,16 @@
     display: block;
     color: var(--primery-text-color);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .portfolio-link:hover,
-  .portfolio-link:focus {
+
+    &:hover,
+    &:focus {
     box-sizing: border-box;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  }
+  
+  
   
   .portfolio-list .portfolio-text {
     color: var(--title-text-color);
@@ -74,10 +76,12 @@
     transform: translateY(100%);
   
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .portfolio-link:hover .portfolio-animation-card,
-  .portfolio-link:focus .portfolio-animation-card {
+    
+    .portfolio-link:hover &,
+    .portfolio-link:focus & {
     transform: translateY(0);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  }
+  
+  
