--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -42,18 +42,21 @@
     box-sizing: border-box;
     border-radius: 4px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .clients-link:hover,
-  .clients-link:focus {
+
+
+      &:hover,
+      &:focus {
     border: 1px solid var(--accent-color);
+  }
   }
   
   .clients-icon {
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .clients-link:hover .clients-icon,
-  .clients-link:focus .clients-icon {
+
+    &:hover,
+    &:focus  {
     fill: var(--accent-color);
   }
+  }
+  
