--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -6,7 +6,7 @@
    
   }
 
-  .contact-list {
+  .contact__list {
     margin: auto;
   }
 
@@ -15,7 +15,7 @@
     
   }
   
-  .contact-link {
+  .contact__link {
     display: flex;
     align-items: center;
     padding-top: 32px;
@@ -27,24 +27,23 @@
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact .contact-link:hover,
-  .contact .contact-link:focus,
-  .contact .contact-link:active {
+
+      &:hover,
+      &:focus,
+      &:active {
     color: var(--accent-color);
   }
-  
-  .contact .contact-link:hover,
-  .contact .contact-link:focus {
-    fill: var(--accent-color);
   }
   
-  .contact-icon {
+  .contact__icon {
     margin-right: 10px;
     fill: var(--title-text-color);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact-link:hover .contact-icon,
-  .contact-link:focus .contact-icon {
+
+    .contact__link:hover &,
+    .contact__link:focus & {
     fill: var(--accent-color);
   }
+  }
+  
+ 
