--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -75,10 +75,10 @@
     height: 44px;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .footer-link:hover,
-  .footer-link:focus {
+    &:hover,
+    &:focus {
     background-color: var(--accent-color);
+  }
   }
   
   .footer-icon {
