--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -198,11 +198,13 @@
     color: var(--white-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .btn-send:hover,
-  .btn-send:focus {
+
+    &:hover,
+    &:focus {
     background: #188ce8;
   }
+  }
+  
   
   .policy-link {
     font-weight: 400;
