--- a/sass/components/_portfolio-filtr.scss
+++ b/sass/components/_portfolio-filtr.scss
@@ -29,11 +29,12 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
       color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .portfolio .filtr .filtr-button:hover,
-  .portfolio .filtr .filtr-button:focus {
+      &:hover,
+      &:focus {
     background: var(--accent-color);
     color: var(--white-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+  }
+  
