--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -31,12 +31,13 @@
     line-height: 1.12;
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .site-nav__link:hover,
-  .site-nav__link:focus {
+
+     &:hover,
+     &:focus {
     color: var(--accent-color);
   }
-  
+  }
+ 
   .site-nav .current {
     color: var(--accent-color);
   }
